src/app/globals.css
@import "tailwindcss";
@plugin "@tailwindcss/forms";

@custom-variant dark (&:where([data-theme="dark"], [data-theme="dark"] *));

@theme {
  --color-offwhite: #fcfdfe;
}

@layer utilities {
  .scrollbar-hide {
    overflow: auto;
    scrollbar-width: none;
    -ms-overflow-style: none;
  }
}

@layer base {
  html {
    overflow-x: hidden;
    @media (min-width: 640px) {
      scrollbar-gutter: stable both-edges;
    }
  }
}

